fix: scrollbar bug and some mobile issues

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
 html {
   background-color: hsl(0, 0%, 18%);
   scroll-behavior: smooth;
+  scrollbar-gutter: stable; /* scrollbar width reserve */
 }
 
 body {
@@ -66,10 +67,14 @@ header {
   letter-spacing: -1px;
 }
 
+header nav {
+  display: flex;
+  gap: 30px;
+}
+
 nav a {
   text-decoration: none;
   color: var(--black);
-  margin-left: 30px;
   font-weight: 700;
   font-size: 13px;
 }
@@ -371,5 +376,28 @@ section {
     border-right: none;
     border-left: none;
     border-bottom: var(--border);
+  }
+}
+
+@media (max-width: 640px) {
+  header nav {
+    gap: 1rem;
+
+    & .link {
+      font-size: 0.75rem;
+    }
+  }
+}
+
+@media (max-width: 512px) {
+  header nav {
+    display: none;
+  }
+
+  .hero h1 {
+    font-size: 15vw;
+    line-height: 0.85;
+    letter-spacing: -0.06em;
+    margin-bottom: 20px;
   }
 }
